# 24SevenClaw

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  LoadMap.md  LoadMap_v3.md  PjPlan.md  TODO.md  package-lock.json  pyproject.toml
24SevenClaw-api/: .env.example  alembic.ini  pyproject.toml
24SevenClaw-api/alembic/versions/: 001_create_users_table.py  002_create_all_domain_tables.py  003_create_organizations_table.py  006_add_rbac_tables.py  009_add_solution_wizard_v2_tables.py  c255febcea16_스키마_전체_동기화.py
24SevenClaw-api/app/: config.py  dependencies.py  main.py  redis.py
24SevenClaw-api/app/core/: crypto.py  middleware.py  rate_limit.py
24SevenClaw-api/app/engine/: __init__.py  catalog.py  generator.py  platforms.py
24SevenClaw-api/app/models/: __init__.py  artifact.py  central_contract.py  license.py  orchestrator.py  organization.py  pm_composition.py  pm_metrics.py  pm_profile.py  pm_rating.py  pm_recommendation_log.py  preset.py  project.py  prototype_session.py  quality_gate.py  rbac.py  registry.py  review_pipeline.py  ticket.py  user.py  user_linear_credentials.py
24SevenClaw-api/app/schemas/: artifact.py  catalog.py  generate.py  orchestrator.py  organization.py  pm_profile.py  preset.py  preview.py  project.py  prototype.py  quality_gate.py  rbac.py  recommend.py  report.py  review_pipeline.py  user.py
24SevenClaw-api/app/services/: artifact_service.py  auth_service.py  catalog_service.py  claude_service.py  generate_service.py  linear_service.py  maturity_service.py  orchestrator_service.py  organization_service.py  pm_markdown_service.py  pm_service.py  preset_service.py  prototype_service.py  quality_gate.py  rbac_service.py  recommend_service.py  report_service.py  review_pipeline.py
24SevenClaw-api/app/ws/: handlers.py  hub.py
24SevenClaw-api/data/: pm_compositions.json  pm_seed_profiles.json
24SevenClaw-api/data/presets/: advanced.json  maturity_questions.json  starter.json
24SevenClaw-api/scripts/: seed_pm_data.py
24SevenClaw-api/tests/: conftest.py  test_artifacts.py  test_auto_transition.py  test_catalog.py  test_claude_service.py  test_contracts.py  test_e2e_flow.py  test_e2e_wizard.py  test_generate.py  test_integration.py  test_maturity.py  test_orchestrator.py  test_organizations.py  test_pm_markdown.py  test_pm_profiles.py  test_presets.py  test_preview.py  test_projects.py  test_prototype_sessions.py  test_quality_gate.py  test_rbac.py  test_recommend.py  test_registry_admin_api.py  test_reports.py  test_review_pipeline.py  test_websocket.py
clickeye-agent/: .env.example  CLAUDE.md  pyproject.toml
clickeye-agent/agent/: config.py  connection.py  local_store.py  main.py  reporter.py
clickeye-agent/agent/handlers/: base.py  docker_handler.py  env_handler.py  runner_handler.py
clickeye-agent/tests/: conftest.py  test_connection_reconnect.py  test_register.py  test_reporter.py  test_runner_handler.py
clickeye-api/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  run_export.sh  test_db.py  test_linear.py
clickeye-api/alembic/: env.py
clickeye-api/alembic/versions/: 001_create_users_table.py  002_create_all_domain_tables.py  004_add_wizard_data_to_projects.py  006_add_rbac_tables.py  007_add_presets_and_maturity_tables.py  008_add_central_contracts_tables.py  009_add_solution_wizard_v2_tables.py  010_redesign_pm_models.py  011_extend_org_project_fields.py  012_pm_management_and_recommendation_logs.py  013_add_body_md_to_registry.py  014_add_markdown_body_to_pm_profiles.py  015_add_user_linear_credentials.py  016_seed_catalog_agents_and_skills.py  017_prototype_catalog_and_app_settings.py  018_merge_heads.py  019_add_initial_task_url.py  020_add_reaction_to_pm_ratings.py  021_add_like_dislike_count_to_pm_metrics.py  022_catalog_ssot_schema.py  023_catalog_ssot_seed.py  024_seed_api_key_guides.py  025_project_linear_credentials.py  026_control_tower.py  027_subtask_linear_fields.py  028_add_roi_standards.py  029_seed_roi_standards.py  030_project_bootstrap_columns.py  031_disable_jira_skill.py  032_orchestrator_session_analysis_result.py  033_project_download_timestamps.py  034_seed_claude_skills.py  035_pm_supported_platforms.py  036_mcp_seed.py  037_registry_메타_컬럼_추가.py  038_pm_프로필_확대_및_네이밍_개편.py  039_modernize_tables.py  040_i18n_catalog_pm.py  040_user_language.py  041_user_language.py  (+21 more)
clickeye-api/app/: config.py  dependencies.py  main.py
clickeye-api/app/core/: exceptions.py  logging.py  rate_limit.py  security.py
clickeye-api/app/data/: llm_pricing.json
clickeye-api/app/engine/: __init__.py  catalog.py  env_generator.py  generator.py  pptx_generator.py
clickeye-api/app/i18n/: error_messages.py
clickeye-api/app/models/: __init__.py  agent_connection.py  app_setting.py  artifact.py  codebase_analysis.py  github_installation.py  github_repo.py  intake.py  (+24 more)
clickeye-api/data/: pm_compositions.json  pm_seed_profiles.json  wizard_v2_ui_schema.json
clickeye-api/scripts/: build_skills_catalog.py  export_openapi.py  seed_i18n_translations.py  seed_pm_compositions.py  seed_pm_data.py
clickeye-api/tests/: catalog_test_data.py  conftest.py  test_artifacts.py  test_auth.py  test_catalog.py  test_claude_service.py  test_contracts.py  test_control_tower.py  test_draft.py  test_e2e_flow.py  test_e2e_wizard.py  test_finalize_initial_tasks.py  test_generate.py  test_generate_pm.py  test_governance_policy.py  test_governance_triage.py  test_health.py  test_intake.py  test_integration.py  test_linear_service.py  test_linear_validate.py  test_llm_fallback.py  test_llm_ledger.py  test_llm_pipeline_ingest.py  test_maturity.py  test_migrations_pg.py  test_modernize_preflight_api.py  test_ops_db.py  test_ops_env.py  test_ops_infra.py  test_orchestrator.py  test_pm_markdown.py  test_pm_profiles.py  test_pm_recommend.py  test_presets.py  test_preview.py  test_projects.py  test_prototype_fallback_metrics.py  test_prototype_sessions.py  test_quality_gate.py  (+8 more)
clickeye-llm/: .env.example  CLAUDE.md  pyproject.toml
clickeye-llm/app/: config.py  main.py  schemas.py
clickeye-llm/prompts/: rag_system.champion.md
(+1587 files in other folders)
