[project]
name = "clickeye-api"
version = "0.1.0"
description = "ClickEye Cloud API - 오케스트레이션 백엔드"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "email-validator>=2.0.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "websockets>=14.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-slugify>=8.0.4",
    "jinja2>=3.1.6",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "python-pptx>=0.6.23",
    "temporalio>=1.8.0",
    "clickeye-governance",
]

[tool.uv.sources]
# 거버넌스 커널은 저장소 루트 프로젝트(clickeye-governance). path 는 저장소 루트(..)이며
# editable 설치 시 저장소 루트가 sys.path 에 올라가 `import governance` 가 원본 소스로
# 해석된다(true-editable, site-packages 사본 없음 = SSOT).
clickeye-governance = { path = "..", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() 패턴 허용

[tool.ruff.lint.per-file-ignores]
# 마이그레이션은 생성물·데이터라 line-length/네이밍 강제 제외 (관례)
"alembic/versions/*" = ["E501", "N806"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*", "slugify.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "no_db: 순수 단위 테스트 — DB 설정 건너뜀",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
